--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ black==22.3.0
 bunyan==0.1.2
 pre-commit==2.18.1
 python-snappy==0.6.1
-snowflake-connector-python==2.7.6
 SQLAlchemy==1.4.32
 openai==0.27.4
 streamlit==1.20.0
 plotly==5.14.1
-snowflake-snowpark-python[pandas]==1.3.0
+snowflake-snowpark-python[pandas]
