--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ SQLAlchemy==1.4.32
 openai==0.27.4
 streamlit==1.20.0
 plotly==5.14.1
-snowflake-snowpark-python[pandas]==1.3.0
+snowflake-snowpark-python[pandas]
