Add env var for database schemas

--- a/.env_sample
+++ b/.env_sample
@@ -11,3 +11,7 @@ export SNOW_SCHEMA="" # replace with your own schema (e.g. ",
 
 # chatgpt API key
 export export CHATGPT_API_KEY=""   # replace with your own API key
+
+# Data Sources
+export DATABASE_SCHEMAS="" # replace with your own database schemas (e.g. "CRUNCHBASE_BASIC_COMPANY_DATA.PUBLIC,STREAMLIT_DB.PUBLIC")
+
